force-app/main/default/objects/Rev_Summary__c/Rev_Summary__c.object-meta.xml
<CustomObject>
    <label>Revenue Summary</label>
    <nameField>
        <displayFormat>RS-{00000}</displayFormat>
        <label>Revenue Summary Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Revenue Summary</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>