force-app/main/default/objects/Rev_Summary__c/fields/Period_12__c.field-meta.xml
<CustomField>
    <fullName>Period_12__c</fullName>
    <label>December</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>