force-app/main/default/objects/Rev_Summary__c/fields/Q3_Value__c.field-meta.xml
<CustomField>
    <fullName>Q3_Value__c</fullName>
    <label>Q3 Value</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>