force-app/main/default/objects/Rev_Summary__c/fields/Revenue_Contract_Id__c.field-meta.xml
<CustomField>
    <fullName>Revenue_Contract_Id__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Revenue Contract Id</label>
    <referenceTo>Revenue_Contract__c</referenceTo>
    <relationshipLabel>Revenue Summary</relationshipLabel>
    <relationshipName>Rev_Summary</relationshipName>
    <type>Lookup</type>
</CustomField>