force-app/main/default/objects/Rev_Summary__c/fields/Revenue_Summary_Guid__c.field-meta.xml
<CustomField>
    <fullName>Revenue_Summary_Guid__c</fullName>
    <externalId>true</externalId>
    <label>Revenue Summary Guid</label>
    <length>255</length>
    <type>Text</type>
</CustomField>