force-app/main/default/objects/Rev_Summary__c/fields/Year_Value__c.field-meta.xml
<CustomField>
    <fullName>Year_Value__c</fullName>
    <label>Year Value</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>