force-app/main/default/objects/Rev_Summary__c/recordTypes/Billings.recordType-meta.xml
<RecordType>
    <fullName>Billings</fullName>
    <active>true</active>
    <description>Billings</description>
    <label>Billings</label>
</RecordType>