force-app/main/default/objects/Rev_Summary__c/recordTypes/Bookings.recordType-meta.xml
<RecordType>
    <fullName>Bookings</fullName>
    <active>true</active>
    <description>Bookings</description>
    <label>Bookings</label>
</RecordType>