force-app/main/default/objects/Rev_Summary__c/recordTypes/Revenue_Recognized.recordType-meta.xml
<RecordType>
    <fullName>Revenue_Recognized</fullName>
    <active>true</active>
    <description>Revenue Recognized</description>
    <label>Revenue Recognized</label>
</RecordType>